force-app/main/default/objects/blng__Usage__c/blng__Usage__c.object-meta.xml
<CustomObject>
    <label>Usage</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Usage #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Usages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>