force-app/main/default/objects/blng__Usage__c/fields/blng__ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>blng__ErrorMessage__c</fullName>
    <label>Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>