force-app/main/default/objects/blng__Usage__c/fields/blng__OrderProduct__c.field-meta.xml
<CustomField>
    <fullName>blng__OrderProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Product</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Usages</relationshipLabel>
    <relationshipName>OrderProductUsages</relationshipName>
    <type>Lookup</type>
</CustomField>