force-app/main/default/objects/blng__Usage__c/fields/blng__ProcessingDate__c.field-meta.xml
<CustomField>
    <fullName>blng__ProcessingDate__c</fullName>
    <label>Processing Date</label>
    <type>Date</type>
</CustomField>