force-app/main/default/objects/blng__Usage__c/fields/blng__Quantity__c.field-meta.xml
<CustomField>
    <fullName>blng__Quantity__c</fullName>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>