force-app/main/default/objects/blng__Usage__c/fields/blng__SourceId__c.field-meta.xml
<CustomField>
    <fullName>blng__SourceId__c</fullName>
    <externalId>true</externalId>
    <label>Source Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>