force-app/main/default/objects/blng__Usage__c/fields/blng__StartDateTime__c.field-meta.xml
<CustomField>
    <fullName>blng__StartDateTime__c</fullName>
    <label>Start DateTime</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>