force-app/main/default/objects/blng__Usage__c/fields/blng__StatusCode__c.field-meta.xml
<CustomField>
    <fullName>blng__StatusCode__c</fullName>
    <label>Status Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>