force-app/main/default/objects/blng__Usage__c/fields/blng__Subtotal__c.field-meta.xml
<CustomField>
    <fullName>blng__Subtotal__c</fullName>
    <label>Subtotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>