force-app/main/default/objects/blng__Usage__c/fields/blng__UnitOfMeasure__c.field-meta.xml
<CustomField>
    <fullName>blng__UnitOfMeasure__c</fullName>
    <label>Unit Of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>blng__UnitOfMeasure</valueSetName>
    </valueSet>
</CustomField>