force-app/main/default/objects/blng__Usage__c/fields/blng__UnitPrice__c.field-meta.xml
<CustomField>
    <fullName>blng__UnitPrice__c</fullName>
    <label>Unit Price</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>