force-app/main/default/objects/blng__Usage__c/fields/blng__UsageSummary__c.field-meta.xml
<CustomField>
    <fullName>blng__UsageSummary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Usage Summary</label>
    <referenceTo>blng__UsageSummary__c</referenceTo>
    <relationshipLabel>Usages</relationshipLabel>
    <relationshipName>Usages</relationshipName>
    <type>Lookup</type>
</CustomField>